grammar.txt
*Program:
	Statement*
Statement:
	ExpressionStatement
	VariableDeclaration
	VariableAssignment
	If
	While
	Break
ExpressionStatement:
	Expression ';'
VariableDeclaration:
	'var' Identifier '=' Expression ';'
VariableAssignment:
	Identifier '=' Expression ';'
If:
	'if' '(' Expression ')' Block
While:
	'while' '(' Expression ')' Block
Break:
	'break' Number ';'
Block:
	'{' Statement* '}'
Expession:
	Equality
Equality:
	Equality "==" Relational
	Relational
Relational:
	Relational "<" Additive
	Additive
Additive:
	Additive ("+" | "-") Multiplicative
	Multiplicative
Multiplicative:
	Multiplicative ("*" | "/" | "%") Primary
	Primary
// Primary: Primitive ('(' Arguments? ')' | '.' Identifier)*
Primary:
	Call
	MemberAccess
	Primitive
Call:
	Primary '(' Arguments? ')'
Arguments:
	Expression (',' Expression)*
MemberAccess:
	Primary '.' Identifier
Primitive:
	Number
	Identifier
	'(' Expression ')'
